@@ -48,6 +48,7 @@ bool Launcher::run(std::string collection, Item *collectionItem, Page *currentPa
     std::string matchedExtension;
     std::string args;
 
+    // check if launcher has overide for the particular rom
     std::string launcherFile = Utils::combinePath( Configuration::absolutePath, "collections", collectionItem->collectionInfo->name, "launchers", collectionItem->name + ".conf" );
     if (std::ifstream launcherStream( launcherFile.c_str( ) ); launcherStream.good( )) // Launcher file found
     {
@@ -61,7 +62,7 @@ bool Launcher::run(std::string collection, Item *collectionItem, Page *currentPa
 
     if(!launcherExecutable(executablePath, launcherName))
     {
-        LOG_ERROR("Launcher", "Failed to find launcher executable (launcher: " + launcherName + " executable: " + executablePath + ")");
+        LOG_ERROR("Launcher", "Failed to find launcher executable (launcher: " + launcherName + " executable: " + executablePath + " collection: " + collectionItem->collectionInfo->name + " item: " + collectionItem->name + ")");
         return false;
     }
     if(!extensions(extensionstr, collection))
@@ -414,6 +415,7 @@ bool Launcher::launcherExecutable(std::string &executable, std::string launcherN
 
     if(std::string executableKey = "launchers." + launcherName + ".executable"; !config_.getProperty(executableKey, executable))
     {
+        LOG_ERROR("Launcher", "No launcher found for: " + executableKey);
         return false;
     }
 
